# packages/api-contracts/types/index.ts
@@ -52,6 +52,22 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/auth/google": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get?: never;
+        put?: never;
+        post: operations["Auth.google"];
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/auth/otp/request": {
         parameters: {
             query?: never;
@@ -337,6 +353,10 @@ export interface components {
             /** @example Registered */
             message: string;
             data: components["schemas"]["SessionUserDto"] | null;
+        };
+        GoogleTokenDto: {
+            /** @example google-id-token */
+            idToken: string;
         };
         OtpRequestDto: {
             /** @example ada@example.com */
@@ -702,6 +722,29 @@ export interface operations {
         requestBody: {
             content: {
                 "application/json": components["schemas"]["PasswordCredentialsDto"];
+            };
+        };
+        responses: {
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["SessionResponseDto"];
+                };
+            };
+        };
+    };
+    "Auth.google": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody: {
+            content: {
+                "application/json": components["schemas"]["GoogleTokenDto"];
             };
         };
         responses: {
